--- a/beta/work_bootstrap.html
+++ b/beta/work_bootstrap.html
@@ -52,6 +52,8 @@
   <body class="bg-img">
 
 
+  		<div class="se-pre-con"></div>
+
       <div id="header-file" style="z-index: 1;height: 90px;position: relative;">
       
       </div>
