photo filter removed

--- a/weddingInvitation/index.html
+++ b/weddingInvitation/index.html
@@ -248,6 +248,7 @@
 								<div class="timeline-body">
 									<span >Father</span><br><span style="color: white;">RAMACHANDRAN M</span><br><br>
 									<span >Mother</span><br><span>ALAGESWARI R</span><br><br>
+									<span >Sister</span><br><span>AZHAGUSELVI</span>
 								</div>
 								
 							</div>
@@ -262,6 +263,7 @@
 								<div class="timeline-body">
 									<span >Father</span><br><span style="color: white;">SELVAN S</span><br><br>
 									<span >Mother</span><br><span>CHITHRA PARVATHI S</span><br><br>
+									<span >Sister</span><br><span>SUPREETA S</span>
 								</div>
 							</div>
 						</li>
