--- a/weddingInvitation/index.html
+++ b/weddingInvitation/index.html
@@ -132,8 +132,8 @@
 					</div>
 					<div class="desc-groom">
 						<h3>Mohan Kumar</h3>
-						<p>Software Developer<br>
-						Infoview Technologies Pvt Ltd, Chennai.</p>
+						<!-- <p>Software Developer<br>
+						Infoview Technologies Pvt Ltd, Chennai.</p> -->
 					</div>
 				</div>
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
@@ -143,8 +143,8 @@
 					</div>
 					<div class="desc-bride">
 						<h3>Aishwarya</h3>
-						<p>Software Developer<br>
-						Infoview Technologies Pvt Ltd, Chennai.</p>
+						<!-- <p>Software Developer<br>
+						Infoview Technologies Pvt Ltd, Chennai.</p> -->
 					</div>
 				</div>
 			</div>
