--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     contact us : rahulrajcse07@gmail.com, salem - tamilnadu.">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/all.css">
     <style>
         html {
