google verification meta tag added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="google-site-verification" content="Wq_xelGcNUqFtpbRskQZ62p7FfT6HbnOIPSc9f5IWkY" />
     <title>Rahulraj Nataraj (rahul162raj) - Full stack web developer</title>
     <meta name="description" content="Rahulraj Natarajan (rahul162raj) - Full stack web developer,
     contact us : rahulrajcse07@gmail.com, salem - tamilnadu.">
