--- a/pongal/pongal.html
+++ b/pongal/pongal.html
@@ -3,7 +3,7 @@
 <title>Pongal SVG animation (rahul162raj)</title>
 <meta name="description"
     content="Pongal festival 2021: It is the harvest festival of Tamil Nadu that falls in the month of Thai (January-February season).
-    The uniqueness of the festival reminds us of the importance of natural resources, especially when the entire world is battling environmental change.">
+    The uniqueness of the festival reminds us of the importance of natural resources, especially when the entire world is battling environmental change.contact us : Rahulraj Natarajan (rahul162raj) - Full stack web developer,rahulrajcse07@gmail.com, salem - tamilnadu.">
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
