seo improved by adding hidden tag

--- a/pongal/pongal.html
+++ b/pongal/pongal.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+	<h1 style="display: none">rahul162raj</h1> 
     <div class="absolute-center">
         <object data="pongal-greeting.svg" type="image/svg+xml"></object>
     </div>
