seo for keyword rahulrajnataraj updated

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <meta name="google-site-verification" content="Wq_xelGcNUqFtpbRskQZ62p7FfT6HbnOIPSc9f5IWkY" />
-    <title>Rahulraj Nataraj (rahul162raj) - Full stack web developer</title>
-    <meta name="description" content="Rahulraj Natarajan (rahul162raj) - Full stack web developer,
+    <title>Rahulraj Nataraj (rahulrajnataraj) - Full stack web developer</title>
+    <meta name="description" content="Rahulraj Natarajan (rahulrajnataraj) - Full stack web developer,
     contact us : rahulrajcse07@gmail.com, salem - tamilnadu.">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
@@ -133,11 +133,11 @@
             <div class="subtitle">Web Developer</div>
         </div>
         <div class="icon-section">
-            <div class="icon"><a href="https://www.linkedin.com/in/rahul162raj/"><i class="fab fa-linkedin"></i></a>
+            <div class="icon"><a href="https://www.linkedin.com/in/rahulrajnataraj/"><i class="fab fa-linkedin"></i></a>
             </div>
-            <div class="icon"><a href="https://github.com/rahul162raj"><i class="fab fa-github"></i></a></div>
-            <div class="icon"><a href="https://dribbble.com/rahul162raj"><i class="fab fa-dribbble"></i></a></div>
-            <div class="icon"><a href="https://vimeo.com/rahul162raj"><i class="fab fa-vimeo"></i></a></div>
+            <div class="icon"><a href="https://github.com/rahulrajnataraj"><i class="fab fa-github"></i></a></div>
+            <div class="icon"><a href="https://dribbble.com/rahulrajnataraj"><i class="fab fa-dribbble"></i></a></div>
+            <div class="icon"><a href="https://vimeo.com/rahulrajnataraj"><i class="fab fa-vimeo"></i></a></div>
         </div>
         <div class="footer">
             <div>
