seo for rahulrajnataraj updated

--- a/pongal/index.html
+++ b/pongal/index.html
@@ -1,9 +1,9 @@
 <html>
 <meta name="google-site-verification" content="Wq_xelGcNUqFtpbRskQZ62p7FfT6HbnOIPSc9f5IWkY" />
-<title>Pongal SVG animation (rahul162raj)</title>
+<title>Pongal SVG animation (rahulrajnataraj)</title>
 <meta name="description"
     content="Pongal festival 2021: It is the harvest festival of Tamil Nadu that falls in the month of Thai (January-February season).
-    The uniqueness of the festival reminds us of the importance of natural resources, especially when the entire world is battling environmental change.contact us : Rahulraj Natarajan (rahul162raj) - Full stack web developer,rahulrajcse07@gmail.com, salem - tamilnadu.">
+    The uniqueness of the festival reminds us of the importance of natural resources, especially when the entire world is battling environmental change.contact us : Rahulraj Natarajan (rahulrajnataraj) - Full stack web developer,rahulrajcse07@gmail.com, salem - tamilnadu.">
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<h1 style="display: none">rahul162raj</h1> 
+    <h1 style="display: none">rahulrajnataraj</h1>
     <div class="absolute-center">
         <object data="pongal-greeting.svg" type="image/svg+xml"></object>
     </div>
