--- a/css-challenge/index.html
+++ b/css-challenge/index.html
@@ -3,10 +3,9 @@
 
 <head>
   <meta name="google-site-verification" content="Wq_xelGcNUqFtpbRskQZ62p7FfT6HbnOIPSc9f5IWkY"/>
-  <title>100 Days CSS Challenge (rahul162raj)</title>
+  <title>100 Days CSS Challenge (rahulrajnataraj)</title>
   <meta name="description" content="100 Days CSS Challenge was my favorite challenge to be a part of. 
-  First off, their website featured the works of developers who participated on CodePen, so it was a nice boost for me.
-  Also, their challenges looked so beautiful to me, something I'd love to do on a next project of mine.">
+  First off, their website featured the works of developers who participated on CodePen, so it was a nice boost for me.">
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
   <base href="/css-challenge/">
@@ -17,6 +16,7 @@
 <link rel="stylesheet" href="styles.css"></head>
 
 <body class="mat-typography">
+  <h1 style="display: none;">rahulrajnataraj</h1>
   <app-root></app-root>
 <script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 
