SEO updated for keyword rahulrajnataraj

--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@
 </head>
 
 <body class="background-color">
+    <h1 style="display: none;">rahulrajnataraj</h1>
     <div class="main-container">
         <div class="image-container">
-            <img src="assets/rahul162raj.jpg" class="circle-image">
+            <img src="assets/rahulrajnataraj.jpg" class="circle-image">
         </div>
         <div class="head">
             <div class="title">Rahulraj Nataraj</div>
