omitted result solution updated

--- a/pongal/index.html
+++ b/pongal/index.html
@@ -3,17 +3,19 @@
 <title>Pongal SVG animation (rahulrajnataraj)</title>
 <meta name="description"
     content="Pongal festival 2021:(rahulrajnataraj) It is the harvest festival of Tamil Nadu. The uniqueness of the festival reminds us of the importance of natural resources, especially when the entire world is battling environmental change.">
- <meta name="keywords" content="rahulrajnataraj">
+<meta name="keywords" content="rahulrajnataraj">
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="content-language" content="en">
 
 <head>
     <link rel="stylesheet" href="pongal.css">
 </head>
 
 <body>
-    <h2 style="display: none">rahulrajnataraj</h2>
+    <h1 style="display: none">rahulrajnataraj</h1>
+    <p style="display: none">rahulrajnataraj</p>
     <div class="absolute-center">
         <object data="pongal-greeting.svg" type="image/svg+xml"></object>
     </div>
