omitted result solutin

--- a/css-challenge/index.html
+++ b/css-challenge/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta name="google-site-verification" content="Wq_xelGcNUqFtpbRskQZ62p7FfT6HbnOIPSc9f5IWkY"/>
   <title>100 Days CSS Challenge (rahulrajnataraj)</title>
-  <meta name="description" content="100 Days CSS Challenge was my favorite challenge to be a part of. 
+  <meta name="description" content="100 Days CSS Challenge(rahulrajnataraj) was my favorite challenge to be a part of. 
   First off, their website featured the works of developers who participated on CodePen, so it was a nice boost for me.">
+  <meta name="keywords" content="rahulrajnataraj">
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
   <base href="/css-challenge/">
@@ -16,7 +17,8 @@
 <link rel="stylesheet" href="styles.css"></head>
 
 <body class="mat-typography">
-  <h1 style="display: none;">rahulrajnataraj</h1>
+  <h1 style="display: none;">100 Days CSS Challenge(rahulrajnataraj)</h1>
+  <p style="display: none;">100 Days CSS Challenge(rahulrajnataraj)</p>
   <app-root></app-root>
 <script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 
