github url updated

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="icon-section">
             <div class="icon"><a href="https://www.linkedin.com/in/rahulrajnataraj/"><i class="fab fa-linkedin"></i></a>
             </div>
-            <div class="icon"><a href="https://github.com/rahulrajnataraj"><i class="fab fa-github"></i></a></div>
+            <div class="icon"><a href="https://github.com/rahul162raj"><i class="fab fa-github"></i></a></div>
             <div class="icon"><a href="https://dribbble.com/rahulrajnataraj"><i class="fab fa-dribbble"></i></a></div>
             <div class="icon"><a href="https://vimeo.com/rahulrajnataraj"><i class="fab fa-vimeo"></i></a></div>
         </div>
