relative path updated

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,8 +8,8 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles/index.css">
-    <script src="/Assets/js/index.js"></script>
+    <link rel="stylesheet" href="./Assets/styles/index.css">
+    <script src="./Assets/js/index.js"></script>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="header-section">
             <div class="profile-image">
-                <img src="/Assets/images/rahulrajnataraj.jpg" alt="">
+                <img src="./Assets/images/rahulrajnataraj.jpg" alt="">
             </div>
             <div class="profile-description">
                 <div class="discription-title">FRONTEND DEVELOPER</div>
