minor issue fixed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="discription-title">FRONTEND DEVELOPER</div>
                 <div class="discription-content">
                     <a target="_blank" href="https://in.linkedin.com/in/rahulrajnataraj">LINKEDIN</a>
-                    <a target="_blank" href="https://dribbble.com/rahulrajnataraj">DRIBBLE</a>
+                    <a target="_blank" href="https://dribbble.com/rahulrajnataraj">DRIBBBLE</a>
                     <a target="_blank" href="https://vimeo.com/rahulrajnataraj">VIMEO</a>
                 </div>
             </div>
